newtype-tools/tests/trybuild/ops/rem_assign.stderr
error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/trybuild/ops/rem_assign.rs:5:26
  |
5 |     #[newtype(rem_assign())]
  |                          ^

error: expected `,`
  --> tests/trybuild/ops/rem_assign.rs:11:29
   |
11 |     #[newtype(rem_assign(u64))]
   |                             ^

error: unexpected end of input, expected `with`
  --> tests/trybuild/ops/rem_assign.rs:17:30
   |
17 |     #[newtype(rem_assign(u64,))]
   |                              ^

error: expected `=`
  --> tests/trybuild/ops/rem_assign.rs:23:35
   |
23 |     #[newtype(rem_assign(u64, with))]
   |                                   ^

error: unexpected end of input, expected an expression
  --> tests/trybuild/ops/rem_assign.rs:29:37
   |
29 |     #[newtype(rem_assign(u64, with =))]
   |                                     ^
